Planets z-index fix

--- a/public/styles/solar-system.css
+++ b/public/styles/solar-system.css
@@ -73,7 +73,6 @@
   top: 50%;
   left: 50%;
   border-radius: 100%;
-  z-index: 10;
 }
 
 #solar-system .planet-orbit {
